fixed: large blank space under nav on mobile view

--- a/app/assets/stylesheets/bootstrap_custom.css.scss
+++ b/app/assets/stylesheets/bootstrap_custom.css.scss
@@ -120,3 +120,11 @@ h1, h2, h3, h4 {
     }
   }
 }
+@media (max-width: 979px) {
+  #main {
+    padding-top: 0px;
+  }
+  .navbar-fixed-top {
+    margin-bottom: 10px;
+  }
+}
